--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="footer">
     <span>Desenvolvido com
-        <i class="material-icons red v-middle">
+        <i class="material-icons v-middle" appRed>
             favorite
         </i>
          por <strong class="red">Pedro Bacchini</strong>
