--- a/src/app/components/product/product-create/product-create.component.html
+++ b/src/app/components/product/product-create/product-create.component.html
@@ -1,1 +1,6 @@
-<p>product-create works!</p>
+<button mat-raised-button color="primary" (click)="save()">
+    Save
+</button>
+<button mat-raised-button (click)="cancel()">
+    Cancel
+</button>
