--- a/src/app/views/product/product.component.html
+++ b/src/app/views/product/product.component.html
@@ -1,1 +1,3 @@
-<button mat-raised-button (click)="newProduct()">New Product</button>
+<button mat-raised-button (click)="newProduct()">
+    New Product
+</button>
